# Ez_voder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main  main.cpp  mainwindow.cpp  mainwindow.h  requirements.txt  setup_youtube.py  style.qrc  style.qss  twitch-dl.pyz  upload_youtube.py
